test/valid/if.art
fn test() {
    let _ = if true { 1 } else { 34 };
    let _ = if false {
        false
    } else if false {
        true
    } else if true {
        false
    } else {
        true
    };
    if true {
        ()
    } else {
        ()
    }
    if true {
        ()
    }
    let x = true;
    if x {} else {}
}
