test/invalid/noret.art
fn test() {
    while true {
        let x = if true { break } else { false };
    }
}
